Fixed 404 page dark mode

--- a/client/src/styles/partials/_dark-mode.scss
+++ b/client/src/styles/partials/_dark-mode.scss
@@ -274,15 +274,6 @@
     color: $neutral-white;
   }
 
-  // 404 Page
-  .not-found__content-card {
-    background: $primary-light-blue;
-  }
-
-  .not-found__intro {
-    color: $neutral-white;
-  }
-
   // Login Required
   .login-required__content-card {
     background: $primary-very-light-blue;
